Partial register read

--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
 		Pipeline-IFID:<br />
 		>> addPC: <label id="label_ifid_addPC">-offline-</label><br />
 		>> instruction: <label id="label_ifid_instruction">-offline-</label><br />
+		Register-A: <label id="label_ifid_ra">-offline-</label><br />
+		Register-B: <label id="label_ifid_rb">-offline-</label><br />
 		<pre id='icache_dump'></pre>
     </body>
 </html>
