--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<script type="text/javascript" src="lib/cell/pipeline_ifid.js"></script>
 		<script type="text/javascript" src="lib/cell/registerFile.js"></script>
 		<script type="text/javascript" src="lib/cell/controlLogicUnit.js"></script>
+		<script type="text/javascript" src="lib/cell/mux.js"></script>
     </head>
     <body>
         <h1>Visual MIPS Simulator</h1>
@@ -64,6 +65,8 @@
 		>> instruction: <label id="label_ifid_instruction">-offline-</label><br />
 		Decoded instruction: <br />
 		<pre id="pre_decoder"></pre>
+		Register destination: <br />
+		<pre id="pre_regDst"></pre>
 		<pre id="icache_dump"></pre>
     </body>
 </html>
