Twos complement problem fixed

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
 		<pre id="pre_decoder"></pre>
 		Register destination: <br />
 		<pre id="pre_regDst"></pre>
+		Sign extender: <br />
+		<pre id="pre_extender"></pre>
+		Debug: <br />
+		<pre id="pre_debug"></pre>
 		<pre id="icache_dump"></pre>
     </body>
 </html>
