Simplified pipelineLatch cell object

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script type="text/javascript" src="lib/cell/programCounter.js"></script>
 		<script type="text/javascript" src="lib/cell/memory.js"></script>
 		<script type="text/javascript" src="lib/cell/cache.js"></script>
-		<script type="text/javascript" src="lib/cell/pipeline_ifid.js"></script>
+		<script type="text/javascript" src="lib/cell/pipelineLatch.js"></script>
 		<script type="text/javascript" src="lib/cell/registerFile.js"></script>
 		<script type="text/javascript" src="lib/cell/controlLogicUnit.js"></script>
 		<script type="text/javascript" src="lib/cell/mux.js"></script>
@@ -20,7 +20,7 @@
 		<table>
 			<tr>
 				<td>
-					<textarea rows=16 cols=60 onclick=wipe(this); id="meminit">Paste meminit.hex here...</textarea><br />
+					<textarea rows=16 cols=60 id="meminit">Paste meminit.hex here...</textarea><br />
 				</td>
 				<td>
 					<table>
