ALU added, un-initialized memory address access returns 0

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<script type="text/javascript" src="lib/cell/registerFile.js"></script>
 		<script type="text/javascript" src="lib/cell/controlLogicUnit.js"></script>
 		<script type="text/javascript" src="lib/cell/mux.js"></script>
+		<script type="text/javascript" src="lib/cell/alu.js"></script>
     </head>
     <body>
         <h1>Visual MIPS Simulator</h1>
@@ -69,6 +70,9 @@
 		<pre id="pre_regDst"></pre>
 		Sign extender: <br />
 		<pre id="pre_extender"></pre>
+		Pipeline-IDEX:<br />
+		ALU: <br />
+		<pre id="pre_alu"></pre>
 		Debug: <br />
 		<pre id="pre_debug"></pre>
 		<pre id="icache_dump"></pre>
