Logic fix on regDst, inefficient. Needs to visualize control signals in pipeline latches

--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
 				</td>
 				<td>
 					Pipeline-IDEX:<br />
+					FWD-A: <br />
+					<pre id="pre_fwd_A"></pre>
+					FWD-B: <br />
+					<pre id="pre_fwd_B"></pre>
 					ALU: <br />
 					<pre id="pre_alu"></pre>
 				</td>
@@ -109,6 +113,7 @@
 					Pipeline-MEMWB:<br />
 					WB Mux: <br />
 					<pre id="pre_WBMux"></pre>
+					Register Write: <label id="label_memwb_regWrite">-offline-</label>
 				</td>
 			</tr>
 		</table>
@@ -117,6 +122,7 @@
 		<table width='100%'>
 			<tr>
 				<td><pre id="icache_dump"></pre></td>
+				<td><pre id="register_dump"></pre></td>
 				<td><pre id="dcache_dump"></pre></td>
 			</tr>
 		</table>
