--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<script type="text/javascript" src="lib/cell/alu.js"></script>
 		<script type="text/javascript" src="lib/cell/forwarding.js"></script>
     </head>
-    <body>
+    <body onload='bench = new signalBench();'>
         <h1>Visual MIPS Simulator</h1>
 		<table>
 			<tr>
@@ -77,7 +77,7 @@
 		<button onclick=reset();>Reset</button>
 		<br />
 		<input id="enableDebug" type="checkbox">Step-by-step</input>
-		<button id="step" disabled=true onclick=step();>Step</button>
+		<button id="step" disabled=true onclick=step(bench);>Step</button>
 		<hr />
 		<table width='100%' border='1px solid #808080'>
 			<tr>
@@ -103,17 +103,21 @@
 					<pre id="pre_fwd_A"></pre>
 					FWD-B: <br />
 					<pre id="pre_fwd_B"></pre>
+					Src-B: <br />
+					<pre id="pre_ALUSrcMux"></pre>
 					ALU: <br />
 					<pre id="pre_alu"></pre>
+					<pre id="idex_flop"></pre>
 				</td>
 				<td>
 					Pipeline-EXMEM:<br />
+					<pre id="exmem_flop"></pre>
 				</td>
 				<td>
 					Pipeline-MEMWB:<br />
 					WB Mux: <br />
 					<pre id="pre_WBMux"></pre>
-					Register Write: <label id="label_memwb_regWrite">-offline-</label>
+					<pre id="memwb_flop"></pre>
 				</td>
 			</tr>
 		</table>
